--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
     "name": "hkhamm",
     "version": "0.1.0",
     "private": true,
+    "homepage": "http://hkhamm.github.io/",
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "deploy": "gh-pages -d build",
+        "predeploy": "npm run build"
     },
     "dependencies": {
         "react": "^17.0.1",
@@ -24,6 +27,7 @@
         "@types/react-dom": "^16.9.8",
         "eslint-config-prettier": "^6.15.0",
         "eslint-plugin-prettier": "^3.1.4",
+        "gh-pages": "^3.1.0",
         "prettier": "^2.1.2",
         "react-scripts": "4.0.0",
         "typescript": "^4.0.3"
