--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "hkhamm",
+    "name": "hkhamm.github.io",
     "version": "0.1.0",
     "private": true,
     "homepage": "http://hkhamm.github.io/",
